초기 프로젝트 및 AdMob 연동

--- a/app.json
+++ b/app.json
@@ -1,4 +1,8 @@
 {
   "name": "codingtest",
-  "displayName": "codingtest"
+  "displayName": "codingtest",
+  "react-native-google-mobile-ads": {
+    "android_app_id": "ca-app-pub-1875469413982562~3563606686",
+    "ios_app_id": "ca-app-pub-1875469413982562~9131875550"
+  }
 }
